Exercises-part-4/exercise-4.01/manifests/log-output.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
  namespace: pingpong-log
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-files
          emptyDir: {}
      containers:


      - name: writer
        imagePullPolicy: Always
        image: sirpacoder/writer:v4.01
        volumeMounts:
          - name: shared-files
            mountPath: /usr/src/app/shared/files
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"


      - name: reader
        imagePullPolicy: Always
        image: sirpacoder/reader:v4.01
        volumeMounts:
          - name: shared-files
            mountPath: /usr/src/app/shared/files
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        readinessProbe:
          initialDelaySeconds: 10 # Initial delay until the readiness is tested
          periodSeconds: 5 # How often to test
          httpGet:
              path: /healthz
              port: 3001

---

apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
  namespace: pingpong-log
spec:
  type: ClusterIP
  selector:
    app: log-output
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3001
