Exercises-part-4/exercise-4.01/manifests/pingpong.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-dep
  namespace: pingpong-log
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      containers:
      - name: pingpong
        image: sirpacoder/pingpong:v4.01
        imagePullPolicy: Always
        readinessProbe:
          initialDelaySeconds: 10
          periodSeconds: 5
          failureThreshold: 10
          httpGet:
            path: /healthz
            port: 5000
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "516Mi"
            cpu: "500m"

---

apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
  namespace: pingpong-log
spec:
  type: ClusterIP
  selector:
    app: pingpong
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 5000
